add attachement handling and hardened register validation
